[package]
name = "sumify"
version = "1.0.1"
edition = "2021"
description = "Batch checksum tool for file integrity verification"
license="MIT"
repository="https://github.com/tmnsolutions/sumify-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.3"
colored = "2.1.0"
sha2 = "0.10.8"
walkdir = "2.5.0"
